# confluent-kafka-python

./: Jenkinsfile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
patch/: README.md  patch.py
src/confluent_kafka/: __init__.py  superstream_consumer.py  superstream_producer.py
src/confluent_kafka/admin/: __init__.py
src/confluent_kafka/superstream/: constants.py  consumer_interceptor.py  core.py  producer_interceptor.py  std.py  superstream_consumer.py  superstream_producer.py  types.py  update_manager.py  utils.py
